Add join-and-queue API
